--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -18,20 +18,26 @@
         </label>
 
         <div class="trigger">
+
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
+          <div style="display:inline-block; position:relative;>
           <form id="siq_searchForm">
-             <input type="search" placeholder="Type here to search..." value="" name="s" />
-        </form>
+             <input type="search" placeholder="search..." value="" name="s" size="7"/>
+           </form>
+           </div>
         </div>
+
       </nav>
+
     {%- endif -%}
 
-  </div>
+
+</div>
 
 
 
