--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -27,7 +27,7 @@
                {% endunless %}
             {%- endif -%}
           {%- endfor -%}
-          <div style="display:inline-block; position:relative;>
+          <div style="display:inline-block; position:relative;">
           <form id="siq_searchForm">
              <input type="search" placeholder="search..." value="" name="s" size="7"/>
            </form>
