--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,10 @@
 
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
+      TeX: {
+     equationNumbers: { autoNumber: "AMS" },
+     tagSide: "right"
+   },
       tex2jax: {
         inlineMath: [['$','$'], ['\\(','\\)']],
         processEscapes: true
